validation tictactoe